--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "background.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "webpack serve --config webpack.config.js --open",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,25 @@
   },
   "homepage": "https://github.com/glorynguyen/ado-utils#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "@fullcalendar/core": "6.1.15",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "6.1.15",
+    "css-loader": "^7.1.2",
+    "express": "^5.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "babel-loader": "^10.0.0",
+    "css": "^3.0.0",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.101.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
